<resources>
    <string name="app_name">GithubUserTwo</string>
    <string name="owner">Victorio Ben Yabes</string>
    <string name="location">Pittsburgh, PA, USA</string>
    <string name="company">Google, Inc</string>
    <string name="repository">Repository</string>
    <string name="follower">Pengikut</string>
    <string name="following">Mengikuti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Victor</string>
    <string name="value_repo">102</string>
    <string name="value_follower">56995</string>
    <string name="value_following">12</string>
    <string name="search">Daftar User</string>
    <string name="find_user">Temukan User</string>
    <string name="setting">Pengaturan</string>
    <string name="empty">0</string>
    <string name="detail">Rincian User</string>
    <string name="setting_account">Pengaturan Akun</string>
    <string name="language_change">Ubah Bahasa</string>
    <string name="fav">Favorite !</string>
    <string name="exit">Keluar</string>
    <string name="favorite">Favorite</string>
    <string name="sure">Yakin ingin keluar?</string>
    <string name="can_delete">Yakin ingin hapus?</string>
    <string name="delete">hapus</string>
    <string name="loading">Loading....</string>
    <string name="alarm">Alarm</string>
    <string name="new_alarm">Buat Alarm</string>
    <string name="reminder">08:00</string>
    <string name="daily">Turn on daily remainder at: </string>
    <string name="githubVersion">Github App(1.0)</string>
    <string name="githubApp">Github User App</string>


</resources>