<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Dark_Blue"
    tools:context=".activity.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_detail_user"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/nameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/loading"
            android:textColor="@color/White"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageDetail"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/White_monotone"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/imageDetail"
            app:layout_constraintTop_toBottomOf="@+id/nameDetail" />

        <TextView
            android:id="@+id/valueRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/White"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/imageDetail" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:layout_marginStart="5dp"
            android:textColor="@color/White_monotone"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/imageDetail"
            app:layout_constraintTop_toBottomOf="@+id/valueRepo" />

        <TextView
            android:id="@+id/valueFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/White"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/valueFollowing"
            app:layout_constraintStart_toEndOf="@+id/valueRepo"
            app:layout_constraintTop_toTopOf="@+id/valueRepo" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textColor="@color/White_monotone"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/valueFollower"
            app:layout_constraintStart_toStartOf="@+id/valueFollower"
            app:layout_constraintTop_toBottomOf="@+id/valueFollower" />

        <TextView
            android:id="@+id/valueFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/White"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/valueFollower" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:layout_marginEnd="5dp"
            android:textColor="@color/White_monotone"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueFollowing" />

        <TextView
            android:id="@+id/detailFav"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav"
            android:textColor="@color/Green_natural"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/userID"
            app:layout_constraintTop_toBottomOf="@+id/nameDetail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/include_tab"
        layout="@layout/layout_detail_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/include_tab"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include_tab"
        app:srcCompat="@drawable/heart" />

</androidx.constraintlayout.widget.ConstraintLayout>